--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
 			<li>Play Guitar</li>
 			  <ul>
 				<li>Electric</li>
+					<ul>
+						<li>Squier Bullet</li>
+						<li>Epiphone ES-339 Pro</li>
+				  	</ul>
 				<li>Acoustic</li>
-			  </ul>
-			<li>Music</li>
-			  <ul>
-				<li>Hair Metal</li>
-				<li>Classic Rock</li>
+				  	<ul>
+						<li>Yamaha</li>
+				  	</ul>
 			  </ul>
 			<li>Food</li>
 			  <ul>
 				<li>Pizza</li>
 				<li>Potstickers</li>
+				<li>
 			  </ul>
 			<li>Sleep</li>
 			<li>Video Games</li>
@@ -45,8 +48,14 @@
 				<li>Destiny</li>
 				  <ul>
 					<li>Hunter</li>
+					<ul>
+						<li>Voidwalker</li>
+					</ul>
 				  </ul>
 				<li>Battlefield 1</li>
+				  	<ul>
+						<li>Scout</li>
+				  	</ul>
 				<li>Mafia III</li>
 				  <ul>
 					<li>Lincoln Clay</li>
@@ -74,7 +83,7 @@
 				<li class="fav-songs">To Be Alone</li>
 				<li class="fav-songs">Cherry Wine</li>
 				<li class="fav-songs">In a Week</li>
-				<li class="fav-songs">Angel of Small Death and the Codiene Scene</li>
+				<li class="fav-songs">Angel of Small Death and the Codeine Scene</li>
 			</ul>
 		<li>Stevie Ray Vaughan</li>
 			<ul>
