--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     	<h1>My Website</h1>
-		<img id="profile-pic"src="">
+		<img id="profile-pic"src="Profile-Pic.jpg">
 		<h2>therightnumber</h2>
 		<h3>About Me</h3>
 		<p>Things I like to do:
