--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
             color: white;
         }
         body{
-            background: 
+            background: 404_image.gif;
         }
         </style>
     </head>
