--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
         <style>
         h1{
             text.align: center;
-            color: white;
+            color: black;
         }
         body{
             background: 404_image.gif;
