--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
             color: black;
         }
         body{
-            background: 404_image.gif;
+            background-image: url("404_image.gif");
         }
         </style>
     </head>
