--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
         <title>Error: 404</title>
         <style>
         h1{
-            text.align: center;
+            text-align: center;
             color: black;
         }
         body{
