--- a/404.html
+++ b/404.html
@@ -6,6 +6,7 @@
         h1{
             text-align: center;
             color: black;
+            font-size: 300%;
         }
         body{
             background-image: url("404_image.gif");
