--- a/404.html
+++ b/404.html
@@ -3,9 +3,9 @@
     <head>
         <title>Error: 404</title>
         <style>
-        h1{
+        h1, h2{
             text-align: center;
-            color: black;
+            color: white;
             font-size: 300%;
         }
         body{
@@ -15,5 +15,7 @@
     </head>
     <body>
         <h1>Error: 404</h1>
+        <hr>
+        <h2>You have found an error</h2>
     </body>
 </html>
