--- a/music.html
+++ b/music.html
@@ -19,36 +19,35 @@
       </tr>
       <tr>
         <td>Hozier</td>
-        <td>To Be Alone</td>
-        <td>Cherry Wine</td>
-        <td>In a Week</td>
-        <td>Angel</td>
+        <td>To Be Alone<br>Cherry Wine<br>In a Week<br>Angel of Small Death and the Codeine Scene</td>
       </tr>
-
-Hozier
-To Be Alone
-Cherry Wine
-In a Week
-Angel of Small Death and the Codeine Scene
-Stevie Ray Vaughan
-Texas Flood
-Little Wing
-Lenny
-Rude Mood
-Motley Crue
-Girls, Girls, Girls
-God Bless the Children of the Beast
-Red Hot
-Smokin in the Boys Room
-Green Day
-Jesus of Suburbia
-Homecoming
-Last Night on Earth
-Jimi Hendrix
-Manic Depression
-Bold as Love
-Little Wing
-51st Anniversary
+      <tr>
+        <td>Stevie Ray Vaughan</td>
+        <td>Texas Flood<br>Little Wing<br>Lenny<br>Life by the Drop</td>
+      </tr>
+      <tr>
+        <td>Motley Crue</td>
+        <td>Girls, Girls, Girls<br>God Bless the Children of the Beast<br>Red Hot<br>Smokin in the Boys Room</td>
+      </tr>
+      <tr>
+        <td>Green Day</td>
+        <td>Jesus of Suburbia<br>Homecoming<br>Last Night on Earth<br>Hitchin a Ride</td>
+      </tr>
+      <tr>
+        <td>Jimi Hendrix</td>
+        <td>Manic Depression<br>Little Wing<br>Bold as Love<br>51st Anniversary</td>
+      </tr>
+      <tr>
+        <td>Eric Clapton</td>
+        <td>Reptile<br>I'll See You Soon<br>I'll Be Alright<br>Tears in Heaven</td>
+      </tr>
+      <tr>
+        <td>James Taylor</td>
+        <td>Steamroller Blues<br>The Frozen Man<br>Sweet Baby James<br>Fire and Rain</td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
 Eric Clapton
 Reptile
 I'll See You Soon
