--- a/music.html
+++ b/music.html
@@ -46,72 +46,81 @@
         <td>Steamroller Blues<br>The Frozen Man<br>Sweet Baby James<br>Fire and Rain</td>
       </tr>
       <tr>
-        <td></td>
+        <td>Jim Croce</td>
+        <td>Photographs and Memories<br>Time in a Bottle<br>These Dreams</td>
       </tr>
-Eric Clapton
-Reptile
-I'll See You Soon
-I'll be Alright
-Tears in Heaven
-James Taylor
-Steamroller Blues
-The Frozen Man
-Sweet Baby James
-Fire and Rain
-Jim Croce
-Photographs and Memories
-Time in a Bottle
-These Dreams
-Explosions in the Sky
-Disintegration Anxiety
-Waking Up
-Aerosmith
-Janie's got a Gun
-Love in an Elevator
-Metallica
-Nothing Else Matters
-Sad But True
-...And Justice For All
-One
-Whiskey in a Jar
-System of a Down
-Chop Suey!
-Aerials
-Cris Barbers Jazz Band
-Petite Fluer
-Rock Island Line
-Chet Baker
-Alone Together
-Angel Eyes
-Bon Iver
-Skinny Love
-Flume
-#29 Strafford Apts
-Re: Stacks
-BB King
-Thrill is Gone
-Why I Sing the Blues
-3 Doors Down
-Here Without You
-Kryptonite
-When I'm Gone
-Seether
-Broken(ft. Amy Lee)
-Like Suicide
-Fake It
-Wham!
-Careless Whisper
-Wake Me Up Before You Go-Go
-Everything She Wants
-David Bowie
-Space Oddity
-Changes
-Chet Atkins
-Mr. Sandman
-Dizzy Strings
-Evanescence
-My Immortal
-Call Me When You're Sober
+      <tr>
+        <td>Explosions in the Sky</td>
+        <td>Disintegration Anxiety<br>Waking Up</td>
+      </tr>
+      <tr>
+        <td>Aerosmith</td>
+        <td>Janie's Got a Gun<br>Love in an Elevator<br>Cryin'</td>
+      </tr>
+      <tr>
+        <td>Metallica</td>
+        <td>Nothing Else Matters<br>Sad But True<br>...And Justice For All<br>One<br>Whiskey in the Jar</td>
+      </tr>
+      <tr>
+        <td>System of a Down</td>
+        <td>Chop Suey!<br>Aerials<br>BYOB</td>
+      </tr>
+      <tr>
+        <td>Cris Barber's Jazz Band</td>
+        <td>Petite Fluer<br>Rock Island Line</td>
+      </tr>
+      <tr>
+        <td>Chet Baker</td>
+        <td>Alone Together<br>Angel Eyes</td>
+      </tr>
+      <tr>
+        <td>Bon Iver</td>
+        <td>Skinny Love<br>Flume<br>#29 Strafford Apts<br>Re: Stacks</td>
+      </tr>
+      <tr>
+        <td>BB King</td>
+        <td>Thrill is Gone<br>Why I Sing the Blues</td>
+      </tr>
+      <tr>
+        <td>3 Doors Down</td>
+        <td>Here Without You<br>Kryptonite<br>When I'm Gone</td>
+      </tr>
+      <tr>
+        <td>Seether</td>
+        <td>Broken(ft. Amy Lee)<br>Like Suicide<br>Fake It</td>
+      </tr>
+      <tr>
+        <td>Wham!</td>
+        <td>Careless Whisper<br>Everything She Wants<br>Wake Me Up Before You Go-Go</td>
+      </tr>
+      <tr>
+        <td>David Bowie</td>
+        <td>Space Oddity<br>Changes</td>
+      </tr>
+      <tr>
+        <td>Chet Atkins</td>
+        <td>Mr. Sandman<br>Dizzy Strings</td>
+      </tr>
+      <tr>
+        <td>Evanescence</td>
+        <td>My Immortal<br>Call Me When You're Sober</td>
+      </tr>
+      <tr>
+        <td>Rush</td>
+        <td>Red Barchetta<br>Tom Sawyer<br>Bastille Day<br>Limelight</td>
+      </tr>
+      <tr>
+        <td>Cinderella</td>
+        <td>Nobody's Fool<br>Long Cold Winter<br>Shelter Me</td>
+      </tr>
+      <tr>
+        <td>Elton John</td>
+        <td>Goodbye Yellow Brick Road<br>Rocket Man<br>Tiny Dancer</td>
+      </tr>
+      <tr>
+        <td>Def Leppard</td>
+        <td>Rocket<br>Woman<br>Photographs</td>
+      </tr>
     </table>
   </body>
 </html>
