--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <title>Music Graph</title>
   </head>
   <body>
-    <table>
+    <table border="1px">
       <tr>
         <th>Artists</th>
         <th>Songs</th>
