--- a/index.html
+++ b/index.html
@@ -2,19 +2,7 @@
 <html>
 	<head>
 		<title>My Website</title>
-		<style>
-    		body{
-        		background-color: maroon;
-        		color: white;
-      		}
-      		#profile-pic{
-        		height: 200px;
-        		width: 200px;
-        		text-align: center;
-      		}
-		.fav-songs{
-			font-weight: bold;
-		}
+		<link rel="stylesheet" type="text/css" href="style.css">
     	</style>
   </head>
   <body>
