--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
     </p>
     <p><b>What I want to learn in Software Engineering:</b><br>I want to know how servers interact with each other, and be able to create my own webpage, and know what to do afterwards</p>
     <p><b>My favorite webpage so far:</b><a href="https://codehs.com/editor/html/153982/274650/index.html">click here</a></p>
+<p>My Favorite Songs/Musicians: <a href="https://perryma.tk/therightnumber/music.html">click here</a></p>
   </body>
 </html>
