--- a/index.html
+++ b/index.html
@@ -42,9 +42,10 @@
 				  	<ul>
 						<li>Scout</li>
 				  	</ul>
-				<li>Mafia III</li>
+				<li>Dishonored</li>
 					 <ul>
-						<li>Lincoln Clay</li>
+						<li>Corvo Attano</li>
+						 <li>Emily Kaldwin</li>
 					 </ul>
 				<li>Just Cause 3</li>
 			  </ul>
