--- a/index.html
+++ b/index.html
@@ -5,53 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    	<h1>My Website</h1>
-		<img id="profile-pic"src="Profile-Pic.jpg">
-		<h2>therightnumber</h2>
-		<h3>About Me</h3>
-		<p>Things I like to do:
-		  <ul>
-			<li>Play Guitar</li>
-			  <ul>
-				<li>Electric</li>
-					<ul>
-						<li>Squier Bullet</li>
-						<li>Epiphone ES-339 Pro</li>
-				  	</ul>
-				<li>Acoustic</li>
-				  	<ul>
-						<li>Yamaha</li>
-				  	</ul>
-			  </ul>
-			<li>Food</li>
-			  <ul>
-				<li>Pizza</li>
-				<li>Potstickers</li>
-			  </ul>
-			<li>Sleep</li>
-			<li>Video Games</li>
-			  <ul>
-				<li>Destiny</li>
-				  <ul>
-					<li>Hunter</li>
-					<ul>
-						<li>Voidwalker</li>
-					</ul>
-				  </ul>
-				<li>Battlefield 1</li>
-				  	<ul>
-						<li>Scout</li>
-				  	</ul>
-				<li>Mafia III</li>
-					 <ul>
-						<li>Lincoln Clay</li>
-					 </ul>
-				<li>Just Cause 3</li>
-			  </ul>
-		  </ul>
-    </p>
-    <p><b>What I want to learn in Software Engineering:</b><br>I want to know how servers interact with each other, and be able to create my own webpage, and know what to do afterwards</p>
-    <p><b>My favorite webpage so far:</b><a href="https://codehs.com/editor/html/153982/274650/index.html">click here</a></p>
-<p>My Favorite Songs/Musicians: <a href="https://perryma.tk/therightnumber/music.html">click here</a></p>
+    	<h1>TheRightNumber</h1>
+  
   </body>
 </html>
