--- a/index.html
+++ b/index.html
@@ -6,6 +6,55 @@
   </head>
   <body>
     	<h1>TheRightNumber</h1>
-  
+        <table border="1px">
+            <tr>
+                <th>
+                    Assignment
+                </th>
+                <th>
+                    Link
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    HTML Test
+                </td>
+                <td>
+                    <a href="htmltest.html">Click Here</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Events Test
+                </td>
+                <td>
+                    <a href="eventsTest.html">Click Here</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    404 Page
+                </td>
+                <td>
+                    <a href="404.html">Click Here</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    To-Do List
+                </td>
+                <td>
+                    <a href="todolist.html">Click Here</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Tic-Tac-Toe
+                </td>
+                <td>
+                    <a href="tictactoe.html">Click Here</a>
+                </td>
+            </tr>
+        </table>
   </body>
 </html>
