--- a/sitemap.html
+++ b/sitemap.html
@@ -10,6 +10,6 @@ and open the template in the editor.
         <script src="sitemap.js"></script>
     </head>
     <body onload="buildMap('sitemapWrapper')">
-        <div id="sitemapWrapper"></div>
+        <p id="sitemapWrapper"></p>
     </body>
 </html>
