--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     	<h1>TheRightNumber</h1>
-        <div id="mapPlacement"></div>
+        
+        <p>Site Navigation:<br><a href="sitemap.hmtl">To Sitemap</a></p>
+        
   </body>
 </html>
