--- a/chalkboard.html
+++ b/chalkboard.html
@@ -23,6 +23,6 @@ and open the template in the editor.
     <body>
         <textarea id="inputText"></textarea>
         <button onclick="addItem()">Add</button>
-        <ul id="list"></ul>
+        <ol id="list"></ol>
     </body>
 </html>
