--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     	<h1>TheRightNumber</h1>
         
-        <p>Site Navigation:<br><a href="sitemap.hmtl">To Sitemap</a></p>
+        <p>Site Navigation:<br><a href="sitemap.html">To Sitemap</a></p>
         
   </body>
 </html>
