--- a/sitemap.html
+++ b/sitemap.html
@@ -6,10 +6,11 @@ and open the template in the editor.
 <html>
     <head>
         <title>Sitemap</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="sitemap.js"></script>
     </head>
     <body onload="buildMap('sitemapWrapper')">
-        <div id="sitemapWrapper"></div>
+        <div id="sitemapWrapper" style="background-color: black"></div>
     </body>
 </html>
