--- a/sitemap.html
+++ b/sitemap.html
@@ -10,7 +10,7 @@ and open the template in the editor.
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="sitemap.js"></script>
     </head>
-    <body onload="buildMap('sitemapWrapper')" id="grad">
+    <body onload="buildMap('sitemapWrapper')">
         <div id="sitemapWrapper" style="background-color: black"></div>
     </body>
 </html>
