--- a/tictactoe.html
+++ b/tictactoe.html
@@ -43,12 +43,11 @@
                     var c1 = document.getElementById(c1id);
                     var c2 = document.getElementById(c2id);
                     var c3 = document.getElementById(c3id);
-                    if((c1.textContent === c2.textContent)&&
-                            (c2.textContent === c3.textContent)
-                            &&(c1.textContent !== "")){
-                        c1.style.backgroundColor = "red";
-                        c2.style.backgroundColor = "red";
-                        c3.style.backgroundColor = "red";
+                    if((c1.textContent === c2.textContent)&&(c2.textContent === c3.textContent)
+                        &&(c1.textContent !== "")){
+                            c1.style.backgroundColor = "red";
+                            c2.style.backgroundColor = "red";
+                            c3.style.backgroundColor = "red";
                     }
             }
         </script>
