--- a/tictactoe.html
+++ b/tictactoe.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
         <style>
             td{
-                border: 1px solid black;
+                border: 1px solid white;
                 width: 100px;
                 height: 100px;
                 font-size: 50px;
@@ -55,19 +55,19 @@
     <body>
         <table>
             <tr>
-                <td id="1" onclick="play('1')"></td>
-                <td id="2" onclick="play('2')"></td>
-                <td id="3" onclick="play('3')"></td>
+                <td id="1" onclick="play('1');"></td>
+                <td id="2" onclick="play('2');"></td>
+                <td id="3" onclick="play('3');"></td>
             </tr>
             <tr>
-                <td id="4" onclick="play('4')"></td>
-                <td id="5" onclick="play('5')"></td>
-                <td id="6" onclick="play('6')"></td>
+                <td id="4" onclick="play('4');"></td>
+                <td id="5" onclick="play('5');"></td>
+                <td id="6" onclick="play('6');"></td>
             </tr>
             <tr>
-                <td id="7" onclick="play('7')"></td>
-                <td id="8" onclick="play('8')"></td>
-                <td id="9" onclick="play('9')"></td>
+                <td id="7" onclick="play('7');"></td>
+                <td id="8" onclick="play('8');"></td>
+                <td id="9" onclick="play('9');"></td>
             </tr>
         </table>
     </body>
