--- a/index.html
+++ b/index.html
@@ -12,15 +12,49 @@
         <div id="menubar" class="abc"></div>
         <h1>TheRightNumber</h1>
         <img src="https://media3.giphy.com/media/uZclwnfXqjpMk/200.gif#75" id="profile-pic">
-        <p style="font-size: 10px">
-        <i> 
-            And I said, "Fly on my sweet angel<br>
-            Fly on through the sky<br>
-            Fly on my sweet angel<br>
-            Forever I will be by your side"<br>
-        </i>
-            -Jimi Hendrix
+        <p class="quota">
+            <i> 
+                And I said, "Fly on my sweet angel<br>
+                Fly on through the sky<br>
+                Fly on my sweet angel<br>
+                Forever I will be by your side"<br>
+            </i>
+            <br>
+            <b>-James Allen Hendrix</b>, <i>"Angel"</i>
         </p>
-        
+        <p class="quota">
+            <i>
+                There was a young girl, whose heart was a frown,<br>
+                Because she was crippled for life, and couldn't speak a sound<br>
+                And she wished and prayed she would stop living, so she decided to die.<br>
+                She drew her wheel chair to the edge of the shore, and to her legs she smiled<br>
+
+                "You won't hurt me no more."<br>
+                But then a sight she'd never seen made her jump and say<br>
+                "Look, a golden winged ship is passing my way"<br>
+                And it really didn't have to stop...it just kept on going.<br>
+                And so castles made of sand slips into the sea, <br>
+                Eventually<br>
+            </i>
+            <br>
+            <b>-James Allen Hendrix</b>, <i>"Castles Made Of Sand"</i>
+        </p>
+        <p class="quota">
+            <i>
+                Her fight and fury is fiery<br>
+                Oh but she loves<br>
+                Like sleep to the freezing<br>
+                Sweet and right and merciful<br>
+                I'm all but washed<br>
+                In the tide of her breathing<br>
+            </i>
+            <br>
+            <b>-Andrew Hozier Byrne</b>, <i>"Cherry Wine"</i>
+        </p>
+        <p class="quota">
+            <i>
+                
+            </i>
+        </p>
   </body>
 </html>
