--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,15 @@
-<!--
-To change this template, choose Tools | Templates
-and open the template in the editor.
--->
 <!DOCTYPE html>
 <html>
     <head>
         <title>My Website</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="menu.css">
         <script>alert("Eureka!");</script>
+        <script src='sitemap.js'></script>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <body>
+    <body onload="buildMap('menubar')">
+        <div id='menubar'></div>
         <h1>I DID IT!!!</h1>
     </body>
 </html>
