--- a/chalkboard.html
+++ b/chalkboard.html
@@ -5,8 +5,7 @@ and open the template in the editor.
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Chalkboard</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script>
             function addItem(){
